[pom] Remove add module as that is legacy and gone in jdk11